--- a/Accessory_figs_20160218.Rmd
+++ b/Accessory_figs_20160218.Rmd
@@ -1,7 +1,20 @@
+plot(failure_inv~seed_size,SummaryInd,pch=16,log="xy",col=col.spp(species))
+plot(abortedcosts~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),pch=16,log="xy",col=col.spp(species))
+mod <- sma(abortedcosts~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),log="xy",method="OLS",slope=1)
+summary(mod)
+
+plot(prepollen_failure_per_seed~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),pch=16,log="xy",col=col.spp(species))
+mod <- sma(prepollen_failure_per_seed~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),log="xy",method="OLS",slope=1)
+summary(mod)
+
+plot(scaled_failure_count~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),pch=16,log="xy",col=col.spp(species))
+mod <- sma(bud_failed_count~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),log="xy",method="OLS",slope=1)
+summary(mod)
+
 #seed count, scaled to plant size, decreases 1:1 with seed size, while bud count decreases less steeply; indication that seed count is what is actually "programmed in"
 ```{r}
 
-win.metafile("figs2/Accessory_Costs/Figure_costs_of_flowers_vs_seed_size.wmf", height=10, width=10)
+win.metafile("figs2/Accessory_Costs/Figure_cost_of_flowers_vs_seed_size.wmf", height=4, width=12)
 plot
 
 
@@ -18,14 +31,16 @@ plot
 # sma_abline(mod)
 # sma_sum(mod)
 
-par(mfcol=c(2,2), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
+par(mfcol=c(1,3), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
 options(scipen = 4)
 
 #put together, big-seeded plants produce lots more buds than predicted from 1:1 relationship, but the "correct" number of seeds
-plot(scaled_seed_count~seed_size,SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.01,1000),ylim=c(1e-6,10),yaxt="n")
+plot(scaled_seed_count~seed_size,SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.01,1000),ylim=c(1e-6,10),yaxt="n",xaxt="n")
 points(scaled_bud_count~seed_size,SummaryInd,pch=21,col=col.spp(species))
-points(scaled_failure_count~seed_size,SummaryInd,pch=2,col=col.spp(species))
-axis(2,yaxp=c(0.00001,0.0001,0.01,1))
+#points(scaled_failure_count~seed_size,SummaryInd,pch=2,col=col.spp(species))
+axis(2, at=c(0.000001,0.0001,0.01,1), labels=c(0.000001,0.0001,0.01,1),cex.axis=0.9)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
+
 mod1 <- sma(scaled_seed_count~seed_size,data=subset(SummaryInd,scaled_seed_count!=0),log="xy",slope=-1,method="OLS")
 mod2 <- sma(scaled_bud_count~seed_size,data=subset(SummaryInd,scaled_bud_count!=0),log="xy",slope=-1,method="OLS")
 mod3 <- sma(scaled_failure_count~seed_size,data=subset(SummaryInd,scaled_failure_count!=0),log="xy",slope=-1,method="OLS")
@@ -33,27 +48,20 @@ sma_abline(mod1)
 abline(mod2$coef[[1]][1,1],mod2$coef[[1]][2,1],col="blue")
 abline(mod3$coef[[1]][1,1],mod3$coef[[1]][2,1],col="red")
 
-plot(0,0,type="n", axes=FALSE, ann=FALSE)
+#plot(0,0,type="n", axes=FALSE, ann=FALSE)
 
 #species that abort a disprortionate # of buds can do so because the relative cost of buds (relative to seeds, dispersal) is small
-plot(scaled_failure_count~prop_prepollencosts,SummarySpp[["mean"]],pch=2,log="y",col=col.spp(species),xlim=c(-.2,1),ylim=c(1e-6,10),cex=1.5)
-mod <- sma(scaled_failure_count~prop_prepollencosts,data=subset(SummarySpp[["mean"]]),log="y",slope=1,method="OLS")
+plot(seedset~prop_prepollencosts,SummarySpp[["mean"]],pch=16,log="y",col=col.spp(species),xlim=c(-.2,1),cex=1.5)
+mod <- sma(seedset~prop_prepollencosts,data=subset(SummarySpp[["mean"]]),log="y",slope=1,method="OLS")
 sma_abline(mod)
 sma_sum(mod)
-par("yaxp")
+
 
 #species that produce a disproportionte number of seeds can do so because they have proportionately lower dispersal costs
-plot(scaled_seed_count~prop_dispersalcosts,SummarySpp[["mean"]],pch=16,log="y",col=col.spp(species),xlim=c(-.2,1),ylim=c(1e-6,10),cex=1.5)
-mod <- sma(scaled_seed_count~prop_dispersalcosts,data=subset(SummarySpp[["mean"]]),log="y",slope=1,method="OLS")
+plot(seedset~prop_dispersalcosts,SummarySpp[["mean"]],pch=16,log="y",col=col.spp(species),xlim=c(-.2,1),cex=1.5)
+mod <- sma(seedset~prop_dispersalcosts,data=subset(SummarySpp[["mean"]]),log="y",slope=1,method="OLS")
 sma_abline(mod)
 sma_sum(mod)
-
-?par
-
-plot(x,y, xaxt="n")
-axis(1, xaxp=c(10, 200, 19), las=2
-
-
 
 sma_sum(mod1)
 sma_sum(mod2)
@@ -163,19 +171,13 @@ write.csv(results, file="figs2/Accessory_Costs/Table02extra_propagule_invest_vs_
 
 #when reproductive investment is scaled by leaf area there is no significant difference by seed size - so increase in repro inv with seed size simply because species with bigger seeds are bigger plants  
 ```{r}
-plot(invest_per_leaf_area~seed_size,SummaryInd, col=col.spp(species),pch=16,log="xy")
-points(invest_per_leaf_area~seed_size,SummarySpp[["mean"]], cex=2, col=col.spp(species),pch=16,log="xy")
-mod <-sma(invest_per_leaf_area~seed_size,SummarySpp[["mean"]],log="xy",method="OLS")
+plot(scaled_repro_inv~seed_size,SummaryInd, col=col.spp(species),pch=16,log="xy")
+points(scaled_repro_inv~seed_size,SummarySpp[["mean"]], cex=2, col=col.spp(species),pch=16,log="xy")
+mod <-sma(scaled_repro_inv~seed_size,SummarySpp[["mean"]],log="xy",method="OLS")
 summary(mod)
 ```
 
-
-
-
 #Consider how accessory cost components shift in terms of costs per seed, and cost as fraction total reproductive investment
-
-
-
 
 
 ```{r}
@@ -202,7 +204,7 @@ dev.off()
 
 #Table showing accessory cost values for the species
 ```{r}
-acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,seed_to_ovule_ratio,accessory_per_seed,total_accessory_Lord,prepollencosts,b_div_p,c_div_p,dispersalcosts_increment,dispersalcosts_increment2,prop_accessory_nonzero)
+acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,seedset,accessory_per_seed,prepollencosts,prepollen_all_per_seed,postpollen_aborted_per_seed,packaging_dispersal_per_seed,prop_accessory_nonzero)
 acc_costs_spp$species <- labels.spp.full()
 acc_costs_spp <- format(acc_costs_spp, digit=2)
 
@@ -288,19 +290,19 @@ abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_failure_per_seed,SummarySpp[["se"]]$prepollen_failure_per_seed)
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-plot(c_div_p ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
-mod <- lm(log10(c_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
+plot(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
+mod <- lm(log10(postpollen_aborted_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
 words.top.left.logxy(mod)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$c_div_p,SummarySpp[["se"]]$c_div_p)
-slopes <- sma(log10(c_div_p) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$postpollen_aborted_per_seed,SummarySpp[["se"]]$postpollen_aborted_per_seed)
+slopes <- sma(log10(postpollen_aborted_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1)
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-plot(dispersalcosts_increment ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
-mod <- lm(log10(dispersalcosts_increment) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="LEES"))
+plot(packaging_dispersal_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(packaging_dispersal_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="LEES"))
 words.top.left.logxy(mod)
-slopes <- sma(log10(dispersalcosts_increment) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]),slope.test=1)
+slopes <- sma(log10(packaging_dispersal_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]),slope.test=1)
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
@@ -417,7 +419,7 @@ dev.off()
 ```
 
 
-
+remove(SummaryInd)
 #Table 4 extra - showing propagule investment instead of seed_count. Could also replace with seedset
 ```{r}
 win.metafile("figs2/Accessory_Costs/Figure_acc_cost_by_seedset.wmf", height=9, width=9)
@@ -437,7 +439,7 @@ legend_with_r2(results,"bottomleft")
 write.csv(results, file="figs2/Accessory_Costs/Table04b_seedset_vs_accessory.csv",row.names=FALSE)
 
 xvar <- "seedset"
-yvar <- "b_div_p"
+yvar <- "prepollen_all_per_seed"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
@@ -445,10 +447,10 @@ results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="b div p = pre-pollination costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000),xaxt="n")
 legend_with_r2(results,"bottomleft")
 
-write.csv(results, file="figs2/Accessory_Costs/Table06a_b_div_p_vs_seedset.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/Table06a_prepollen_all_per_seed_vs_seedset.csv",row.names=FALSE)
 
 xvar <- "seedset"
-yvar <- "c_div_p"
+yvar <- "postpollen_aborted_per_seed"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy") 
@@ -457,7 +459,7 @@ plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="c div p = aborted post 
 legend_with_r2(results,"bottomleft")
 
 
-write.csv(results, file="figs2/Accessory_Costs/Table06b_c_div_p_vs_seedset.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/Table06b_postpollen_aborted_per_seed_vs_seedset.csv",row.names=FALSE)
 
 xvar <- "seedset"
 yvar <- "packaging_dispersal_per_seed"
@@ -598,18 +600,18 @@ dev.off()
 #For each species the accessory cost components that cause shifts in total accessory costs is different and reflects both which components are largest and whichvary most with some factor - seedset, age, etc.
 ```{r}
 xvar1 <- "packaging_dispersal_per_seed"
-xvar2 <- "b_div_p"
-xvar3 <- "c_div_p"
+xvar2 <- "prepollen_all_per_seed"
+xvar3 <- "postpollen_aborted_per_seed"
 yvar <- "accessory_per_seed"
 data <- subset(SummaryInd,SummaryInd[[xvar1]]>0&SummaryInd[[xvar2]]>0&SummaryInd[[xvar3]]>0&species!="BAER"&species!="COER"&species!="LEES")
 data <- split(data, data$species)
 
 mod <- lapply(data, function(x) lm(log10(x[[yvar]]) ~  (log10(x[[xvar1]]))+(log10(x[[xvar2]]))+(log10(x[[xvar3]]))))
-mod_LEES <- lm(log10(accessory_per_seed) ~ (log10(b_div_p)+(log10(c_div_p))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar3]]>0&species=="LEES"))
-mod_BAER <- lm(log10(accessory_per_seed) ~ (log10(b_div_p)+(log10(packaging_dispersal_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="BAER"))
-mod_COER <- lm(log10(accessory_per_seed) ~ (log10(b_div_p)+(log10(packaging_dispersal_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="COER"))
+mod_LEES <- lm(log10(accessory_per_seed) ~ (log10(prepollen_all_per_seed)+(log10(postpollen_aborted_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar3]]>0&species=="LEES"))
+mod_BAER <- lm(log10(accessory_per_seed) ~ (log10(prepollen_all_per_seed)+(log10(packaging_dispersal_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="BAER"))
+mod_COER <- lm(log10(accessory_per_seed) ~ (log10(prepollen_all_per_seed)+(log10(packaging_dispersal_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="COER"))
 
-species_coef <- as.data.frame(c("intercept","packaging&dispersal","b_div_p","c_div_p"))
+species_coef <- as.data.frame(c("intercept","packaging&dispersal","prepollen_all_per_seed","postpollen_aborted_per_seed"))
 
 for(i in 1:11) {
      species_coef <- dplyr::bind_cols(species_coef, as.data.frame(mod[[i]]$coefficients))
@@ -618,17 +620,17 @@ for(i in 1:11) {
 names(species_coef) <- c("effect","BOLE","EPMI","GRBU","GRSP","HATE","HEPU","PELA","PEPU","PHPH","PILI","PUTU")
 
 BAER_c <- as.data.frame(mod_BAER$coefficients)
-BAER_c$effect <- c("intercept","b_div_p","packaging&dispersal")
+BAER_c$effect <- c("intercept","prepollen_all_per_seed","packaging&dispersal")
 names(BAER_c) <- c("BAER","effect")
 species_coef <- dplyr::left_join(species_coef,BAER_c,by="effect")
 
 COER_c <- as.data.frame(mod_COER$coefficients)
-COER_c$effect <- c("intercept","b_div_p","packaging&dispersal")
+COER_c$effect <- c("intercept","prepollen_all_per_seed","packaging&dispersal")
 names(COER_c) <- c("COER","effect")
 species_coef <- dplyr::left_join(species_coef,COER_c,by="effect")
 
 LEES_c <- as.data.frame(mod_LEES$coefficients)
-LEES_c$effect <- c("intercept","b_div_p","c_div_p")
+LEES_c$effect <- c("intercept","prepollen_all_per_seed","postpollen_aborted_per_seed")
 names(LEES_c) <- c("LEES","effect")
 species_coef <- dplyr::left_join(species_coef,LEES_c,by="effect")
 
@@ -637,7 +639,7 @@ species_coef <- species_coef[c("effect", "BAER", "BOLE", "COER", "EPMI", "GRBU",
 
 write.csv(species_coef, file="figs2/Accessory_Costs/Table08_accessory_components_coeff.csv",row.names=FALSE)
 
-species_t <- as.data.frame(c("intercept","packaging&dispersal","b_div_p","c_div_p"))
+species_t <- as.data.frame(c("intercept","packaging&dispersal","prepollen_all_per_seed","postpollen_aborted_per_seed"))
 
 for(i in 1:11) {
      species_t <- dplyr::bind_cols(species_t, as.data.frame(summary(mod[[i]])$coefficient[,4]))
@@ -646,17 +648,17 @@ for(i in 1:11) {
 names(species_t) <- c("effect","BOLE","EPMI","GRBU","GRSP","HATE","HEPU","PELA","PEPU","PHPH","PILI","PUTU")
 
 BAER_t <- as.data.frame(summary(mod_BAER)$coefficient[,4])
-BAER_t$effect <- c("intercept","b_div_p","packaging&dispersal")
+BAER_t$effect <- c("intercept","prepollen_all_per_seed","packaging&dispersal")
 names(BAER_t) <- c("BAER","effect")
 species_t <- dplyr::left_join(species_t,BAER_t,by="effect")
 
 COER_t <- as.data.frame(summary(mod_COER)$coefficient[,4])
-COER_t$effect <- c("intercept","b_div_p","packaging&dispersal")
+COER_t$effect <- c("intercept","prepollen_all_per_seed","packaging&dispersal")
 names(COER_t) <- c("COER","effect")
 species_t <- dplyr::left_join(species_t,COER_t,by="effect")
 
 LEES_t <- as.data.frame(summary(mod_LEES)$coefficient[,4])
-LEES_t$effect <- c("intercept","b_div_p","c_div_p")
+LEES_t$effect <- c("intercept","prepollen_all_per_seed","postpollen_aborted_per_seed")
 names(LEES_t) <- c("LEES","effect")
 species_t <- dplyr::left_join(species_t,LEES_t,by="effect")
 
