--- a/Accessory_figs_20160218.Rmd
+++ b/Accessory_figs_20160218.Rmd
@@ -180,11 +180,13 @@ ternary$packaging_dispersal_per_seed[9] <- 0.1
 ternary$seedcosts = ternary$seed_size + ternary$prepollencosts + ternary$packaging_dispersal_per_seed
 ternary$per_seed <-100*ternary$seed_size/ternary$seedcosts
 ternary$per_poll <-100*ternary$prepollencosts/ternary$seedcosts
+ternary$post_poll <- 100-ternary$per_poll
 
 ternary$per_disp <-100*ternary$packaging_dispersal_per_seed/ternary$seedcosts
 mod_poll <- sma(per_poll~seedcosts,ternary,slope.test=0,method="OLS",log="x")
 mod_seed <- sma(per_seed~seedcosts,ternary,slope.test=0,method="OLS",log="x")
 mod_disp <- sma(per_disp~seedcosts,ternary,slope.test=0,method="OLS",log="x")
+mod_post_poll <- sma(post_poll~seedcosts,ternary,slope.test=0,method="OLS",log="x")
 
 costs_per_seed <- as.data.frame("costs for seed (%)")
 costs_per_seed <- cbind(costs_per_seed,select(mod_seed$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
@@ -205,9 +207,28 @@ write.csv(costs_per_seed, file="figs2/Accessory_Costs/Table00_in_text_costs_per_
 win.metafile("figs2/Accessory_Costs/FigureXX_seedcost_components.wmf", height=6, width=6)
 plot
 
+
 plot(per_seed~seedcosts,ternary,col="black",log="x",pch=21,cex=2,ylim=c(0,75),ylab="prop of seedcosts")
 points(per_poll~seedcosts,ternary,col="red",pch=16,cex=2)
 points(per_disp~seedcosts,ternary,col="blue",pch=16,cex=2)
+
+abline(mod_poll$groupsummary["Int"][[1]],mod_poll$groupsummary["Slope"][[1]],col="red",lwd=2)
+abline(mod_seed$groupsummary["Int"][[1]],mod_seed$groupsummary["Slope"][[1]],col="black",lty=2,lwd=2)
+abline(mod_disp$groupsummary["Int"][[1]],mod_disp$groupsummary["Slope"][[1]],col="blue",lwd=2)
+legend("topleft",legend=c("seed","prepollen","pack&disp"),col=c("black","red","blue"),pch=16, cex=1.1,bty="n")
+dev.off()
+
+
+win.metafile("figs2/Accessory_Costs/FigureXX_prepoll_vs_postpoll.wmf", height=6, width=6)
+plot
+
+
+plot(per_poll~seedcosts,ternary,col="black",log="x",pch=16,cex=2,ylim=c(0,100),ylab="prop of seedcosts")
+points(post_poll~seedcosts,ternary,col="red",pch=16,cex=2)
+abline(mod_poll$groupsummary["Int"][[1]],mod_poll$groupsummary["Slope"][[1]],col="black",lwd=2)
+abline(mod_post_poll$groupsummary["Int"][[1]],mod_post_poll$groupsummary["Slope"][[1]],col="red",lwd=2)
+summary(mod_post_poll)
+
 
 abline(mod_poll$groupsummary["Int"][[1]],mod_poll$groupsummary["Slope"][[1]],col="red",lwd=2)
 abline(mod_seed$groupsummary["Int"][[1]],mod_seed$groupsummary["Slope"][[1]],col="black",lty=2,lwd=2)
@@ -390,7 +411,6 @@ points(scaled_bud_count~seed_size,SummaryInd,pch=21,col=col.spp(species))
 axis(2, at=c(0.000001,0.0001,0.01,1), labels=c(0.000001,0.0001,0.01,1),cex.axis=0.9)
 axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
 
-summary(mod2)
 mod1 <- sma(scaled_seed_count~seed_size,data=subset(SummaryInd,scaled_seed_count!=0),log="xy",slope=-1,method="OLS")
 mod2 <- sma(scaled_bud_count~seed_size,data=subset(SummaryInd,scaled_bud_count!=0),log="xy",slope=-1,method="OLS")
 mod3 <- sma(scaled_failure_count~seed_size,data=subset(SummaryInd,scaled_failure_count!=0),log="xy",slope=-1,method="OLS")
