--- a/Accessory_figs_20160218.Rmd
+++ b/Accessory_figs_20160218.Rmd
@@ -34,6 +34,12 @@ plot(prop_failure~seedset,data=subset(SummarySpp[["mean"]],species!="BAER"&speci
 mod <- lm(prop_failure~seedset,data=subset(SummarySpp[["mean"]],species!="BAER"&species!="PEPU"))
 summary(mod)
 
+
+#SummarySpp[["mean"]]$embryo_endo_West1990 <- c(22.246,3.6828,1.0961,0.02,31.234,10.961,12.446,0.29716,0.8064,12.328,3.2274,1.7127,1.1583,1.274)
+SummarySpp[["mean"]]$embryo_endo_West1990 <- c(120,3.6828,0.8,0.02,31.234,10.961,12.446,0.29716,0.8064,12.328,3.2274,1.7127,0.72,1.274)
+SummarySpp[["mean"]]$provisioning2 <- SummarySpp[["mean"]]$postpollen_all_per_seed - SummarySpp[["mean"]]$embryo_endo_West1990
+
+
 #Discussion or Appendix: proportion energy to prepollen tissues decreases with plant age
 ```{r}
 yvar <- "accessory_per_seed"
@@ -268,10 +274,12 @@ prop_seedcosts_spp$species <- labels.spp.full()
 prop_seedcosts_spp <- format(prop_seedcosts_spp, digit=2)
 write.csv(prop_seedcosts_spp, file="figs2/Accessory_Costs/Table04_Prop_seedcosts_by_Species.csv",row.names=FALSE)
 ```
+$embryo_endo_West1990
+
 
 #Figure 3. Scaling of accessory costs versus seed size, by species
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure04_seed_size_acc_cost_correlations.wmf", height=5, width=15)
+win.metafile("figs2/Accessory_Costs/Figure03_seed_size_acc_cost_correlations.wmf", height=5, width=15)
 plot
 
 par(mfrow=c(1,3), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
@@ -285,7 +293,7 @@ abline(coef(mod)[1],1,col="red")
 axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 
-plot(prepollencosts~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required pre-pollination costs per seed (mg/seed)",xlab="",cex=1.5)
+plot(prepollencosts~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required pollinator attraction costs per seed (mg/seed)",xlab="",cex=1.5)
 #y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollencosts,SummarySpp[["se"]]$prepollencosts)
 mod <- lm(log10(prepollencosts)~log10(seed_size),SummarySpp[["mean"]])
 abline(coef(mod)[1],coef(mod)[2])
@@ -293,14 +301,53 @@ abline(coef(mod)[1],1,col="red")
 axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 
-plot(packaging_dispersal_per_seed~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="packaging and dispersal costs per seed (mg/seed)",xlab="",cex=1.5)
+plot(postpollen_all_per_seed~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required provisioning costs per seed (mg/seed)",xlab="",cex=1.5)
 #y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$packaging_dispersal_per_seed,SummarySpp[["se"]]$prepollencosts)
-mod <- lm(log10(packaging_dispersal_per_seed)~log10(seed_size),SummarySpp[["mean"]])
+mod <- lm(log10(postpollen_all_per_seed)~log10(seed_size),SummarySpp[["mean"]])
 abline(coef(mod)[1],coef(mod)[2])
 abline(coef(mod)[1],1,col="red")
 axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
+dev.off()
+```
+
+#Figure 3 v2. Scaling of accessory costs versus weight of embryo + endosperm, by species
+```{r}
+win.metafile("figs2/Accessory_Costs/Figure03_embryo_size_acc_cost_correlations.wmf", height=5, width=15)
+plot
+
+par(mfrow=c(1,3), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
+options(scipen = 5)
+
+plot(accessory_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="total accessory costs per seed (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(accessory_per_seed) ~ log10(embryo_endo_West1990),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
+words.top.left.logxy(mod)
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$accessory_per_seed,SummarySpp[["se"]]$accessory_per_seed)
+abline(coef(mod)[1],coef(mod)[2])
+abline(coef(mod)[1],1,col="red")
+axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+
+plot(prepollencosts~embryo_endo_West1990,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required pollinator attraction costs per seed (mg/seed)",xlab="",cex=1.5)
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollencosts,SummarySpp[["se"]]$prepollencosts)
+mod <- lm(log10(prepollencosts)~log10(embryo_endo_West1990),SummarySpp[["mean"]])
+words.top.left.logxy(mod)
+abline(coef(mod)[1],coef(mod)[2])
+abline(coef(mod)[1],1,col="red")
+axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+
+plot(postpollen_all_per_seed~embryo_endo_West1990,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required provisioning costs per seed (mg/seed)",xlab="",cex=1.5)
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$packaging_dispersal_per_seed,SummarySpp[["se"]]$prepollencosts)
+mod <- lm(log10(postpollen_all_per_seed)~log10(embryo_endo_West1990),SummarySpp[["mean"]])
+words.top.left.logxy(mod)
+abline(coef(mod)[1],coef(mod)[2])
+abline(coef(mod)[1],1,col="red")
+axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+mtext(text="embryo + endosperm (mg)",side=1,line=1.5,outer=TRUE)
+
 dev.off()
 ```
 
@@ -314,8 +361,8 @@ mod <- lm(log10(accessory_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$accessory_per_seed,SummarySpp[["se"]]$accessory_per_seed)
 slopes <- sma(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-#abline(slopes$groupsummary["Int"][[1]],1,col="red")
-abline(0,1,col="red")
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+#abline(0,1,col="red")
 words.bottom.right.logxy(mod)
 
 acc_by_species <- select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
@@ -329,14 +376,14 @@ abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-plot(prepollen_failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
-mod <- lm(log10(prepollen_failure_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
+plot(failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(failure_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
 words.bottom.right.logxy(mod)
-extra.topleft.logxy("the per seed costs of failure scale isometrically with seed size")
-slopes <- sma(prepollen_failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
+#extra.topleft.logxy("the per seed costs of failure scale isometrically with seed size")
+slopes <- sma(failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_failure_per_seed,SummarySpp[["se"]]$prepollen_failure_per_seed)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$failure_per_seed,SummarySpp[["se"]]$failure_per_seed)
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(prepollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
@@ -348,14 +395,14 @@ abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_all_per_seed,SummarySpp[["se"]]$prepollen_all_per_seed)
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-plot(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
-mod <- lm(log10(postpollen_aborted_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
-words.top.left.logxy(mod)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$postpollen_aborted_per_seed,SummarySpp[["se"]]$postpollen_aborted_per_seed)
-slopes <- sma(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1, log="xy",method="OLS")
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-abline(slopes$groupsummary["Int"][[1]],1,col="red")
-acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+# plot(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
+# mod <- lm(log10(postpollen_aborted_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
+# words.top.left.logxy(mod)
+# y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$postpollen_aborted_per_seed,SummarySpp[["se"]]$postpollen_aborted_per_seed)
+# slopes <- sma(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1, log="xy",method="OLS")
+# abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+# abline(slopes$groupsummary["Int"][[1]],1,col="red")
+# acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 plot(packaging_dispersal_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(packaging_dispersal_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="LEES"))
@@ -369,12 +416,81 @@ mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 slopes <- sma(postpollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-acc_by_species$variable = c("total accessory costs","prepollen_success","prepollen_failure","total prepollen","c div p","dispersal","total postpollen")
+acc_by_species$variable = c("total accessory costs","prepollen_success","failed_tissues","total prepollen","dispersal","total postpollen")
 
 write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_cost_seed_size_slopes.csv",row.names=FALSE)
 ```
-plot(prop_prepollen_all~seed_size,SummarySpp[["mean"]],pch=16,col=col.spp(species),log="x")
 
+#Table 3 v2. Slopes for various embryo size by acc cost regressions
+```{r}
+par(mfrow=c(2,3), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
+options(scipen = 5)
+
+plot(accessory_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), xlim=c(.02,10000), ylab="total per seed accessory costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(accessory_per_seed) ~ log10(embryo_endo_West1990),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$accessory_per_seed,SummarySpp[["se"]]$accessory_per_seed)
+slopes <- sma(accessory_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
+abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+#abline(0,1,col="red")
+words.bottom.right.logxy(mod)
+
+acc_by_species <- select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
+
+plot(prepollencosts ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen success costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(prepollencosts) ~ log10(embryo_endo_West1990),data=subset(SummarySpp[["mean"]]))
+words.bottom.right.logxy(mod)
+extra.topleft.logxy("slope <1, so bigger seeded species have lower fixed costs of making pre-pollination parts")
+slopes <- sma(prepollencosts ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
+abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+
+plot(failure_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(failure_per_seed) ~ log10(embryo_endo_West1990),data=subset(SummarySpp[["mean"]]))
+words.bottom.right.logxy(mod)
+#extra.topleft.logxy("the per seed costs of failure scale isometrically with seed size")
+slopes <- sma(failure_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
+abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$failure_per_seed,SummarySpp[["se"]]$failure_per_seed)
+acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+
+plot(prepollen_all_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(prepollen_all_per_seed) ~ log10(embryo_endo_West1990),data=subset(SummarySpp[["mean"]]))
+words.bottom.right.logxy(mod)
+slopes <- sma(prepollen_all_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),slope.test=1,method="OLS", log="xy")
+abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_all_per_seed,SummarySpp[["se"]]$prepollen_all_per_seed)
+acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+
+# plot(postpollen_aborted_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
+# mod <- lm(log10(postpollen_aborted_per_seed) ~ log10(embryo_endo_West1990),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
+# words.top.left.logxy(mod)
+# y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$postpollen_aborted_per_seed,SummarySpp[["se"]]$postpollen_aborted_per_seed)
+# slopes <- sma(postpollen_aborted_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1, log="xy",method="OLS")
+# abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+# abline(slopes$groupsummary["Int"][[1]],1,col="red")
+# acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+
+SummarySpp[["mean"]]$provisioning2 <- SummarySpp[["mean"]]$postpollen_all_per_seed - SummarySpp[["mean"]]$embryo_endo_West1990
+plot(provisioning2 ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(provisioning2) ~ log10(embryo_endo_West1990),data=subset(SummarySpp[["mean"]]))
+words.top.left.logxy(mod)
+slopes <- sma(provisioning2 ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
+abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
+
+slopes <- sma(postpollen_all_per_seed ~ embryo_endo_West1990,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
+acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+
+acc_by_species$variable = c("total accessory costs","prepollen_success","failed_tissues","total prepollen","dispersal","total postpollen")
+
+write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_cost_embryo_endo_West1990_slopes.csv",row.names=FALSE)
+```
 
 #Figure 4 seed count, scaled to plant size, decreases 1:1 with seed size, while bud count decreases less steeply; indication that seed count is what is actually "programmed in"
 ```{r}
